Fixed left alignment of navlogo

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ nav {
     z-index: 100;
 }
 
+
 body.dark nav {
     border: 1px solid #393838;
 
@@ -81,10 +82,16 @@ nav .nav-bar .logo a {
     display: none;
 }
 
+nav .navLogo {
+    margin-left: -75px;
+}
+
 .nav-bar .nav-links {
     display: flex;
     align-items: center;
 }
+
+
 
 .nav-bar .nav-links li {
     margin: 0 5px;
